generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  MyStruct createNewStruct() {
    return _createNewStruct();
  }

  late final _createNewStructPtr =
      _lookup<ffi.NativeFunction<MyStruct Function()>>('createNewStruct');
  late final _createNewStruct =
      _createNewStructPtr.asFunction<MyStruct Function()>();

  void printStruct(
    MyStruct s,
  ) {
    return _printStruct(
      s,
    );
  }

  late final _printStructPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(MyStruct)>>('printStruct');
  late final _printStruct =
      _printStructPtr.asFunction<void Function(MyStruct)>();
}

final class MyStruct extends ffi.Struct {
  @ffi.Int()
  external int v1;

  @ffi.Int()
  external int v2;

  @ffi.Int()
  external int v3;
}
